manifests/base/argo-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    cert-manager.io/cluster-issuer: demo-issuer
  namespace: tensure
spec:
  tls:
  - hosts:
      - app1.ioinfo.shop
    secretName: demo-secret
  rules:
  - host: app1.ioinfo.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-service
            port:
              number: 80
